--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     [
         {
             "src" : "app.js",
-            "use" : "@vercel/node"
+            "use" : "@now/node"
         }
     
     ]
