--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,12 @@
             "use" : "@now/node"
         }
     
+    ],
+    "routes" :
+    [
+        {
+            "src" : "/(.*)",
+            "dest" : "app.js"
+        }
     ]
 }
